# HelloWorld

helloworld-linux/: HelloWorld.cpp
helloworld-linux-cmake/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  main.cpp
helloworld-mingw/: MyTest.cpp  MyTest.h  helloworld.cpp
